--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
         "php": ">=5.4.0",
         "ext-soap": "*"
     },
+    "require-dev": {
+        "php": ">=5.5.0",
+        "ext-soap": "*"
+    },
     "autoload": {
         "psr-4": { "PayPay\\": "src/" }
     }
